--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,6 @@
 		padding: 5px;
 	} 
 
-	.sponsors {
-		padding-bottom: 4em; 
-	}
-
-
 	div.floating-menu {
 		position:fixed;
 		background:#fff4c8;
@@ -51,13 +46,13 @@
 		font-weight: 300;
 		font-size: 17pt;
 		line-height: 1.75em;
-		color: #888;
+		color: #FFF;
 		-webkit-text-stroke: 0.1px;
 	}
 
 	h1,h2,h3,h4,h5,h6
 	{
-		color: #666;
+		color: #FFF;
 		margin: 0 0 1em 0;
 		font-weight: 100;
 		line-height: 1.5em;
@@ -438,6 +433,7 @@
 				form select
 				{
 					line-height: 1.25em;
+					color: #000;
 				}
 
 				form select
@@ -448,6 +444,7 @@
 				form .select
 				{
 					position: relative;
+
 				}
 				
 					form .select select
@@ -489,16 +486,19 @@
 					outline: 0;
 					box-shadow: inset 0 0 0 1px #afd9e0;
 					background: #fcfcfc;
+					color: #000;
 				}
 
 			form textarea
 			{
 				min-height: 13em;
+				color: #000;
 			}
 			
 			form select
 			{
 				position: relative;
+				color: #000;
 			}
 			
 				form select option
@@ -695,7 +695,7 @@
 			cursor: default;
 		}
 		
-			.feature-icon .fa
+			.feature-icon div
 			{
 				display: inline-block;
 				width: 2em;
@@ -705,6 +705,13 @@
 				box-shadow: inset 0 0 0 1px #666;
 				color: #666;
 				line-height: 2.1em;
+			}
+			.feature-icon div img
+			{
+				width: 55%;
+				height: 55%;
+				position: relative;
+				top: 5px;
 			}
 		
 			.feature-icon:before
@@ -737,7 +744,7 @@
 			{
 			}
 
-				.dark .feature-icon .fa
+				.dark .feature-icon div
 				{
 					background: rgba(255,255,255,0.15);
 					box-shadow: inset 0 0 0 1px rgba(255,255,255,0.5);
@@ -1202,6 +1209,15 @@
 /*********************************************************************************/
 /* Header Menu                                                                   */
 /*********************************************************************************/
+	.headerBackgroundBlack{
+		background: rgba(0, 0, 0, 0.6) !important;
+
+	}
+
+	#logoBanner{
+		width: 40%;
+		height: 40%;
+	}
 
 	#headerMenu
 	{
@@ -1209,11 +1225,17 @@
 		left: 0;
 		top: 0;
 		width: 100%;
-		background: #333;
+		background-color: transparent;
 		z-index: 10000;
 		cursor: default;
-		padding: 0.5em 0 0.5em 0;
+		padding: 0;
 		font-size: 0.9em;
+
+		-webkit-transition: background 0.5s linear;
+        -moz-transition: background 0.5s linear;
+        -ms-transition: background 0.5s linear;
+        -o-transition: background 0.5s linear;
+        transition: background 0.5s linear;
 	}
 
 		#headerMenu span
@@ -1226,17 +1248,6 @@
 			font-weight: 600;
 		}
 
-			#headerMenu span a
-			{
-				color: #fff;
-				border-bottom-color: rgba(255,255,255,0.25);
-			}
-
-				#headerMenu span a:hover
-				{
-					border-bottom-color: rgba(255,255,255,0);
-				}
-
 		#headerMenu nav
 		{
 			position: absolute;
@@ -1245,21 +1256,26 @@
 			margin-top: -0.9em;
 		}
 
+		.menuBorder{
+			border-style: solid !important;
+			border-right-width: 1px !important;
+			border-color: #837E7C !important;
+		}
+
 			#headerMenu nav a
 			{
 				display: block;
 				float: left;
-				color: #acb7bb;
+				color: #fff;
 				border: 0;
 				padding: 0 1em 0 1em;
 				height: 1.8em;
 				line-height: 1.8em;
-				border-radius: 0.25em;
 			}
 			
 				#headerMenu nav a:hover
 				{
-					color: #fff !important;
+					color: #00CDCD !important;
 				}
 
 				#headerMenu nav a.active
@@ -1277,12 +1293,17 @@
 	{
 		position: relative;
 		margin: 0;
-		background: url('../images/header.jpg');
-		background-size: cover;
-		background-position: center center;
-		padding: 0 0 0 0;
+		background: url('../images/header.jpg') !important;
+		background-size: cover !important;
+		background-position: center center !important;
+		padding: 53px 0 0 0;
 		text-align: center;
 		color: #fff;
+		padding: 6em 0 6em 0;
+		border-bottom: 3px solid;
+		border-image-source: linear-gradient(90deg, rgba(0,205,205,1), rgba(0,0,0,1));
+		border-image-slice: 20;
+		border-image-repeat: stretch;	
 	}
 	
 		#header:after
@@ -1295,6 +1316,8 @@
 			height: 100%;
 			background: url('images/overlay.png');
 		}
+
+
 	
 		#header > header,
 		#header > header p,
@@ -1344,7 +1367,7 @@
 	
 		.main > header
 		{
-			background: #fff;
+			background: #000;
 			text-align: center;
 			padding: 5em 0 5em 0;
 			margin: 0;
@@ -1367,6 +1390,11 @@
 		.main > .content
 		{
 			padding: 6em 0 6em 0;
+		    border-style: solid;
+		    border-width: 0 0 3px 0;
+		    border-image-source: linear-gradient(90deg, rgba(0,205,205,1), rgba(0,205,205,0));
+		    border-image-slice: 20;
+		    border-image-repeat: stretch;	
 		}
 
 			.main > .content > .container
@@ -1389,7 +1417,8 @@
 							url('images/bgbl.svg') bottom left no-repeat,
 							url('images/bgbl.svg') bottom left no-repeat,
 							url('images/overlay.png'),
-							linear-gradient(45deg, #b39c68, #a56365, #412e4c);
+							linear-gradient(180deg, rgba(0,0,0,1), rgba(0,0,0,0)),
+							url('../images/bg1.jpg');
 			}
 
 			.main > .content.style2
@@ -1397,7 +1426,8 @@
 				background:	url('images/bgtr.svg') top right no-repeat,
 							url('images/bgbl.svg') bottom left no-repeat,
 							url('images/overlay.png'),
-							linear-gradient(45deg, #384955, #655361, #85505f);
+							linear-gradient(180deg, rgba(0,0,0,1), rgba(0,0,0,0)),
+							url('../images/bg1.jpg');
 			}
 
 			.main > .content.style3
@@ -1405,13 +1435,14 @@
 				background:	url('images/bgtr.svg') top right no-repeat,
 							url('images/bgbl.svg') bottom left no-repeat,
 							url('images/overlay.png'),
-							linear-gradient(45deg, #5f796b, #3a4e59, #2f394e);
+							linear-gradient(180deg, rgba(0,0,0,1), rgba(0,0,0,0)),
+							url('../images/bg1.jpg');
 			}
 
 			.main > .content.style4
 			{
 				padding-top: 0;
-				background: #fff;
+				background: #000;
 			}
 
 /*********************************************************************************/
@@ -1424,7 +1455,8 @@
 		margin: 0;
 		text-align: center;
 		padding: 4em 0 8em 0;
-		box-shadow: inset 0 1px 0 0 #e6e6e6;
+		box-shadow: inset 0 1px 0 0 #222;
+		background-color: #000;
 	}
 	
 		#footer .copyright
