--- a/css/style.css
+++ b/css/style.css
@@ -95,29 +95,8 @@
 	{
 		color: inherit;
 		text-decoration: none;
-		border-bottom: dotted 1px rgba(0,0,0,0.25);
-		-moz-transition: border-bottom-color 0.25s ease-in-out;
-		-webkit-transition: border-bottom-color 0.25s ease-in-out;
-		-o-transition: border-bottom-color 0.25s ease-in-out;
-		-ms-transition: border-bottom-color 0.25s ease-in-out;
-		transition: border-bottom-color 0.25s ease-in-out;
 	}
 	
-		a:hover
-		{
-			border-bottom-color: rgba(0,0,0,0);
-		}
-
-		.dark a
-		{
-			color: #fff;
-			border-bottom-color: rgba(255,255,255,0.5);
-		}
-
-			.dark a:hover
-			{
-				border-bottom-color: rgba(255,255,255,0);
-			}
 
 	sub
 	{
@@ -1283,6 +1262,67 @@
 					background: #424B4F;
 					color: #fff;
 				}
+
+.MobileMenu {
+	position: fixed;
+	float: right;
+	display: none;
+}
+
+.MobileMenuIcon {
+	float: right;
+	width: 48px;
+	height: 48px;
+}
+
+.MobileMenuIcon img{
+	float: right;
+}
+
+.MobileMenu {
+	width: 100%;
+	background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.6) !important;
+}
+
+.MobileMenuContainer div{
+	height: 32px;
+	width: 100%;
+	text-align: center;
+}
+
+.MobileMenuContainer div a{
+	padding-top: 2px;
+	width: 100%;
+	height: 32px;
+	display: block;
+
+}
+
+.MobileMenuContainer div a:hover{
+	color: #00CDCD;
+}
+
+@media only screen and (max-width: 580px) {
+	.MobileMenuIcon{
+		display: block;
+	}
+	.no-touch{
+		display: none;
+	}
+}
+
+@media only screen and (min-width: 581px) {
+	.no-touch{
+		display: block;
+	}
+	.MobileMenuIcon{
+		display: none;
+	}
+	.MobileMenu{
+		display: none;
+	}
+}
+
 
 
 /*********************************************************************************/
